Convert images to green alpha channel

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 tensorflow = "*"
-scipy = "*"
 numpy = "*"
+imageio = "*"
 
 [dev-packages]
+"flake8" = "*"
 
 [requires]
 python_version = "3.6"
